--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,10 @@
   		<artifactId>mysql-connector-java</artifactId>
   		<version>8.0.22</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.openjfx</groupId>
+  		<artifactId>javafx-media</artifactId>
+  		<version>16-ea+5</version>
+  	</dependency>
   </dependencies>
 </project>
